jwt token included

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 API_PORT=7000
 
 MONGO_URI=mongodb://127.0.0.1:27017/nexusDB
+JWT_SECRET=kjdfadsfladfoflandsfdsfnlldknfdflksdfn
+NODE_ENV=development
